examples/test/testpolicy13140.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13140
  namespace: namespace324
spec:
  podSelector:
    matchLabels:
      key10: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value31
          key21: value4
          key12: value7
      podSelector:
        matchLabels:
          key21: value5
